# gym-anything

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agents/evaluation/: run_single.py
benchmarks/cua_world/environments/active_inspire_windows_env/: env.json
benchmarks/cua_world/environments/android_aps_env/: MANUAL_DOWNLOAD.md
benchmarks/cua_world/environments/apptainer_gnome_env/: env.yaml  gnome-desktop.def  start_gnome.sh
benchmarks/cua_world/environments/attendhrm_env/: env.json
benchmarks/cua_world/environments/autopsy_env/: .gitignore
benchmarks/cua_world/environments/azure_devops_server_env/: env.json
benchmarks/cua_world/environments/bahmni_env/: env.json
benchmarks/cua_world/environments/bcwebcam_env/: env.json
benchmarks/cua_world/environments/blue_sky_plan_env/: env.json
benchmarks/cua_world/environments/cameo_data_manager_env/: .gitignore  env.json
benchmarks/cua_world/environments/canvas_lms_env/: env.json
benchmarks/cua_world/environments/copper_point_of_sale_env/: env.json
benchmarks/cua_world/environments/crimson_env/: env.json
benchmarks/cua_world/environments/dhis2_env/: env.json
benchmarks/cua_world/environments/docker_desktop_env/: env.json
benchmarks/cua_world/environments/docker_env/: .gitignore  Dockerfile
benchmarks/cua_world/environments/dreamplan_home_design_software_env/: env.json
benchmarks/cua_world/environments/drupal_commerce_env/: env.json
benchmarks/cua_world/environments/emoncms_env/: env.json
benchmarks/cua_world/environments/energy_3d_env/: env.json
benchmarks/cua_world/environments/epi_info_env/: env.json
benchmarks/cua_world/environments/equest_env/: env.json
benchmarks/cua_world/environments/eramba_env/: env.json
benchmarks/cua_world/environments/erpnext_env/: env.json
benchmarks/cua_world/splits/: active_inspire_split.json  active_inspire_windows_split.json  aerobridge_split.json  android_studio_split.json  apache_openoffice_split.json  ardour_split.json  arkcase_split.json  astroimagej_split.json  attendhrm_split.json  autopsy_split.json  avare_split.json  azure_devops_server_split.json  bahmni_split.json  bcwebcam_split.json  blender3d_split.json  blenderbim_split.json  blue_sky_plan_split.json  bluemail_split.json  bridgecommand_split.json  calligra_words_split.json  cameo_chemicals_split.json  cameo_data_manager_split.json  canvas_lms_split.json  chrome_all_split.json  coppeliasim_split.json  copper_point_of_sale_split.json  crimson_split.json  dbeaver_split.json  dhis2_split.json  diagrams_net_split.json  docker_desktop_split.json  docker_split.json  draw_desktop_split.json  dreamplan_home_design_software_split.json  drupal_commerce_split.json  eclipse_split.json  ekylibre_split.json  electrical_calculations_split.json  emoncms_split.json  epi_info_split.json  (+164 more)
docs/content/docs/: index.mdx  meta.json
src/gym_anything/: cli.py  doctor.py  env.py  extras_cli.py  specs.py  vlm.py
src/gym_anything/remote/: client.py  master.py  worker.py
src/gym_anything/verification/: contracts.py  runner.py  specs.py  vlm_checklist.py
tests/: test_agent_evaluation_contract.py  test_cli_contract.py  test_doctor.py  test_extras_cli.py  test_remote_client.py  test_remote_cluster_integration.py  test_remote_master_routing.py  test_remote_module_layout.py  test_verification_system.py
website/: index.html
website/explore/: app.js  index.html  manifest.json  style.css
website/explore/data/: embedding_ids_bge.json
(+8019 files in other folders)
